--- a/contribution/lang/en.json
+++ b/contribution/lang/en.json
@@ -3267,16 +3267,16 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "In dungeons, you will not heal after each fight and enemies are stronger, but there are more exp and loot",
- 	 	 	 	 	"eng": "In dungeons, you will not heal after each fight and enemies are stronger, but there are more exp and loot"
+ 	 	 	 	 	"trans": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots",
+ 	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
  	 	 	"noHealingPrompt": {
- 	 	 	 	"trans": "Maybe buy some healing item first?",
- 	 	 	 	"eng": "Maybe buy some healing item first?",
+ 	 	 	 	"trans": "Maybe buy some healing items first?",
+ 	 	 	 	"eng": "Maybe buy some healing items first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon",
- 	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
+ 	 	 	 	 	"trans": "Seems like you dont have any Pain Away with you. Purchase it from Trinoky Mart in the city first before entering dungeons since you will not regen after battles in dungeon",
+ 	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you. Purchase it from Trinoky Mart in the city first before entering dungeons since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
  	 	 	 	 	"trans": "Later",
@@ -3328,8 +3328,8 @@
  	 	 	 	 	"eng": "Nearby Enemies"
  	 	 	 	},
  	 	 	 	"desc": {
- 	 	 	 	 	"trans": "Scans for nearby enemies on the street, enemies outside dungeons are weaker and easier to defeat. However they also drop less exp",
- 	 	 	 	 	"eng": "Scans for nearby enemies on the street, enemies outside dungeons are weaker and easier to defeat. However they also drop less exp"
+ 	 	 	 	 	"trans": "Scans for nearby enemies on the street. Enemies outside dungeons are weaker and easier to defeat. However, they also drop less exp",
+ 	 	 	 	 	"eng": "Scans for nearby enemies on the street. Enemies outside dungeons are weaker and easier to defeat. However, they also drop less exp"
  	 	 	 	}
  	 	 	}
  	 	},
@@ -3356,8 +3356,8 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "There is no community lore for this item yet, be the first to create one for it.",
- 	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
+ 	 	 	 	 	"trans": "There is no community lore for this item yet. Be the first to create one for it.",
+ 	 	 	 	 	"eng": "There is no community lore for this item yet. Be the first to create one for it."
  	 	 	 	}
  	 	 	},
  	 	 	"openButton": {
@@ -3796,7 +3796,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Chance of you stunning the enemy when dealing damage, \r\n    causing them to lose the ability to respond to your attack",
- 	 	 	 	"eng": "Chance of you stunning your enemy when dealing damage, \r\n    causing them not able to respond to your attack"
+ 	 	 	 	"eng": "Chance of you stunning your enemy when dealing damage, \r\n    causing them to lose the ability to respond to your attack"
  	 	 	}
  	 	},
  	 	"evade": {
@@ -3806,7 +3806,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Chance of you dodging an enemy's attack",
- 	 	 	 	"eng": "Chance of you dodging an enemies attack"
+ 	 	 	 	"eng": "Chance of you dodging an enemy's attack"
  	 	 	}
  	 	},
  	 	"bargain": {
@@ -3816,7 +3816,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Influences the price when buying and selling from NPCs or stores.",
- 	 	 	 	"eng": "Influences the price when buying and selling from npc's or stores."
+ 	 	 	 	"eng": "Influences the price when buying and selling from NPCs or stores."
  	 	 	}
  	 	},
  	 	"pocket": {
@@ -3836,17 +3836,17 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Increases damage by a percentage",
- 	 	 	 	"eng": "Increases damage by percentage"
+ 	 	 	 	"eng": "Increases damage by a percentage"
  	 	 	}
  	 	},
  	 	"defenceMultiplier": {
  	 	 	"name": {
- 	 	 	 	"trans": "Defence multiplier",
- 	 	 	 	"eng": "Defence multiplier"
+ 	 	 	 	"trans": "Defense multiplier",
+ 	 	 	 	"eng": "Defense multiplier"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Decreases damage received by a percentage",
- 	 	 	 	"eng": "Decreases damage received by percentage"
+ 	 	 	 	"eng": "Decreases damage received by a percentage"
  	 	 	}
  	 	},
  	 	"stunEvade": {
@@ -3856,7 +3856,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Decreases the chance of getting stunned",
- 	 	 	 	"eng": "Decreases chance of getting stunned"
+ 	 	 	 	"eng": "Decreases the chance of getting stunned"
  	 	 	}
  	 	},
  	 	"shieldMultiplier": {
@@ -3866,7 +3866,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Increases strength of shield by a percentage",
- 	 	 	 	"eng": "Increase strength of shield by percentage"
+ 	 	 	 	"eng": "Increase strength of shield by a percentage"
  	 	 	}
  	 	},
  	 	"healMultiplier": {
@@ -3886,7 +3886,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Reduces time required to complete an AFK task",
- 	 	 	 	"eng": "Reduce AFK task required time"
+ 	 	 	 	"eng": "Reduces time required to complete an AFK task"
  	 	 	}
  	 	},
  	 	"expMultiplier": {
@@ -3896,7 +3896,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Increases EXP you receive",
- 	 	 	 	"eng": "Increase EXP you receive"
+ 	 	 	 	"eng": "Increases EXP you receive"
  	 	 	}
  	 	},
  	 	"btcMultiplier": {
@@ -3906,7 +3906,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Increases Bitcoins you receive",
- 	 	 	 	"eng": "Increase Bitcoins you receive"
+ 	 	 	 	"eng": "Increases Bitcoins you receive"
  	 	 	}
  	 	},
  	 	"maxHealth": {
@@ -3936,7 +3936,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Calibration failure will not destroy the item",
- 	 	 	 	"eng": "Calibration fails will not destroy the item"
+ 	 	 	 	"eng": "Calibration failure will not destroy the item"
  	 	 	}
  	 	},
  	 	"containerEpicDrop": {
@@ -4138,8 +4138,8 @@
  	 	 	 	"vars": [
  	 	 	 	 	"total"
  	 	 	 	],
- 	 	 	 	"trans": "it will cost ${total} Bitcoin total",
- 	 	 	 	"eng": "it will cost ${total} Bitcoin total"
+ 	 	 	 	"trans": "It will cost ${total} Bitcoin total",
+ 	 	 	 	"eng": "It will cost ${total} Bitcoin total"
  	 	 	}
  	 	},
  	 	"notEnoughMoney": {
@@ -4157,8 +4157,8 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Congratulations! You have leveled up your ${levelName}.",
- 	 	 	 	"eng": "Congratulation, you have leveled up your ${levelName}!"
+ 	 	 	 	"trans": "Congratulations! You have leveled up your ${levelName}!",
+ 	 	 	 	"eng": "Congratulations! You have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
  	 	 	 	"vars": [
@@ -4171,8 +4171,8 @@
  	 	},
  	 	"review": {
  	 	 	"title1": {
- 	 	 	 	"trans": "I'm Dexter, the developer of this game, and I'd like to know your experience so far.",
- 	 	 	 	"eng": "I'm Dexter, the developer of this game, and I hope to know your experience so far."
+ 	 	 	 	"trans": "I'm Dexter, the developer of this game. And I'd like to know your experience so far.",
+ 	 	 	 	"eng": "I'm Dexter, the developer of this game. And I'd like to know your experience so far."
  	 	 	},
  	 	 	"title2": {
  	 	 	 	"trans": "How many stars would you give?",
@@ -4181,7 +4181,7 @@
  	 	 	"badReview": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "I am so sorry, please let me know where I can improve!",
- 	 	 	 	 	"eng": "I am so sorry, please let me know where I can improve"
+ 	 	 	 	 	"eng": "I am so sorry, please let me know where I can improve!"
  	 	 	 	}
  	 	 	},
  	 	 	"goodReview": {
@@ -4191,7 +4191,7 @@
  	 	 	 	},
  	 	 	 	"title2": {
  	 	 	 	 	"trans": "Your good review is going to help me very much and bring more players into our community!",
- 	 	 	 	 	"eng": "Your good review is going to help me much and bring more players into our community!"
+ 	 	 	 	 	"eng": "Your good review is going to help me very much and bring more players into our community!"
  	 	 	 	}
  	 	 	},
  	 	 	"dontAskMeAgain": {
@@ -4200,7 +4200,7 @@
  	 	 	},
  	 	 	"reviewLater": {
  	 	 	 	"trans": "Review later",
- 	 	 	 	"eng": "review later"
+ 	 	 	 	"eng": "Review later"
  	 	 	}
  	 	},
  	 	"contributionModal": {
@@ -4243,8 +4243,8 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Congratulation, you have leveled up your ${levelName}!",
- 	 	 	 	"eng": "Congratulation, you have leveled up your ${levelName}!"
+ 	 	 	 	"trans": "Congratulations! You have leveled up your ${levelName}!",
+ 	 	 	 	"eng": "Congratulations! You have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
  	 	 	 	"vars": [
@@ -4283,8 +4283,8 @@
  	 	 	 	"eng": "Please agree to the rules below before start chatting"
  	 	 	},
  	 	 	"rule1": {
- 	 	 	 	"trans": "No spamming or meaningless message.",
- 	 	 	 	"eng": "No spamming or meaningless message."
+ 	 	 	 	"trans": "No spamming or meaningless messages.",
+ 	 	 	 	"eng": "No spamming or meaningless messages."
  	 	 	},
  	 	 	"rule2": {
  	 	 	 	"trans": "No personal attacks or threats.",
@@ -4436,8 +4436,8 @@
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "You do not have enough Unit to donate.",
- 	 	 	 	"eng": "You do not have enough Unit to donate."
+ 	 	 	 	"trans": "You do not have enough Units to donate.",
+ 	 	 	 	"eng": "You do not have enough Units to donate."
  	 	 	}
  	 	}
  	},
@@ -4447,7 +4447,7 @@
  	 	 	 	"tierName"
  	 	 	],
  	 	 	"trans": "This is an example chat frame of ${tierName} Tier",
- 	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	 	"eng": "This is an example chat frame of ${tierName} Tier"
  	 	}
  	},
  	"reward": {
@@ -4497,7 +4497,7 @@
  	 	 	"eng": "Requires you to be in a gang"
  	 	},
  	 	"requireTopGang": {
- 	 	 	"trans": "Requires you to be in the top gang",
+ 	 	 	"trans": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard",
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
@@ -4597,16 +4597,16 @@
  	 	 	"eng": "Click here to attack the enemy"
  	 	},
  	 	"statusInv": {
- 	 	 	"trans": "Click 'TAKE ALL' to get all the loots",
- 	 	 	"eng": "Click 'TAKE ALL' to get all the loots"
+ 	 	 	"trans": "Click 'TAKE ALL' to get all the loot",
+ 	 	 	"eng": "Click 'TAKE ALL' to get all the loot"
  	 	},
  	 	"dungeonQuest": {
  	 	 	"trans": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time",
  	 	 	"eng": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "you will receive exp, Bitcoin and loots when you defeat enemies,\n                give it a try now!",
- 	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\n                give it a try now!"
+ 	 	 	"trans": "You will receive exp, Bitcoin and loot when you defeat enemies,\n                give it a try now!",
+ 	 	 	"eng": "You will receive exp, Bitcoin and loot when you defeat enemies,\n                give it a try now!"
  	 	}
  	},
  	"IAP": {
@@ -4622,7 +4622,7 @@
  	 	},
  	 	"paypal": {
  	 	 	"paypalBonusTitle": {
- 	 	 	 	"trans": "All PayPal purchases grants 10% additional Units!",
+ 	 	 	 	"trans": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser.",
  	 	 	 	"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
  	 	 	},
  	 	 	"paypalBonus": {
