--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -3268,7 +3268,7 @@
  	 	 	 	"eng": "calibration"
  	 	 	},
  	 	 	"enemyGangsAndMark": {
- 	 	 	 	"trans": "Gangs und Ausrüstungsmerkmale",
+ 	 	 	 	"trans": "Feindliche Gangs und Ausrüstungsmerkmale",
  	 	 	 	"eng": "Enemy Gangs and Equipment Marks"
  	 	 	}
  	 	},
