--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -2109,7 +2109,7 @@
  	 	},
  	 	"setBio": {
  	 	 	"title": {
- 	 	 	 	"trans": "Напиши о себе",
+ 	 	 	 	"trans": "Расскажи о себе",
  	 	 	 	"eng": "Enter your bio"
  	 	 	}
  	 	},
