--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -3122,7 +3122,7 @@
  	 	},
  	 	"craftingPage": {
  	 	 	"title": {
- 	 	 	 	"trans": "製造中",
+ 	 	 	 	"trans": "合成",
  	 	 	 	"eng": "Crafting"
  	 	 	},
  	 	 	"onlyShowCraftable": {
