--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -277,7 +277,7 @@
  	"location": {
  	 	"mainHub": {
  	 	 	"name": {
- 	 	 	 	"trans": "Centre-ville de Shangri-La",
+ 	 	 	 	"trans": "Centre-Ville de Shangri-La",
  	 	 	 	"eng": "Shangri-La City center"
  	 	 	},
  	 	 	"description": {
@@ -516,7 +516,7 @@
  	 	 	 	 	"tierName",
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Plan ${typeName} ${tierName}",
+ 	 	 	 	"trans": "Plan ${tierName} ${typeName}",
  	 	 	 	"eng": "${tierName} ${typeName} cache"
  	 	 	},
  	 	 	"description": {
@@ -639,11 +639,11 @@
  	 	},
  	 	"healingArea1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Spray anti-douleur",
+ 	 	 	 	"trans": "Anti-douleur en spray",
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Est-ce que ton ami et toi avez des maux de tête ? Utilisez un Spray Anti-douleur™ pour vous soulager !",
+ 	 	 	 	"trans": "Est-ce que ton ami et toi avez des maux de tête ? Utilisez un anti-douleur en spray™ pour vous soulager !",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
@@ -870,7 +870,7 @@
  	 	},
  	 	"lootBox1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Conteneur verouillé",
+ 	 	 	 	"trans": "Caisse verouillée",
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
@@ -880,7 +880,7 @@
  	 	},
  	 	"lootBox2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Conteneur verrouillé rare",
+ 	 	 	 	"trans": "Caisse verrouillée rare",
  	 	 	 	"eng": "locked rare container"
  	 	 	},
  	 	 	"description": {
@@ -890,7 +890,7 @@
  	 	},
  	 	"lootBox3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Conteneur verrouillé légendaire",
+ 	 	 	 	"trans": "Caisse verrouillée légendaire",
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
@@ -1170,7 +1170,7 @@
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "Conteneur mystérieux",
+ 	 	 	 	"trans": "Caisse mystérieuse",
  	 	 	 	"eng": "Mysterious Container"
  	 	 	},
  	 	 	"description": {
@@ -3734,7 +3734,7 @@
  	 	},
  	 	"rngInterferer": {
  	 	 	"description": {
- 	 	 	 	"trans": "Chances supplémentaire de trouver des objets épiques dans les conteneurs",
+ 	 	 	 	"trans": "Chances supplémentaire de trouver des objets épiques dans les caisses",
  	 	 	 	"eng": "Additional epic drop chance from containers"
  	 	 	}
  	 	},
@@ -3890,7 +3890,7 @@
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "Ouvrir un conteneur mystérieux",
+ 	 	 	 	"trans": "Ouvrir une caisse mystérieuse",
  	 	 	 	"eng": "Unlock Mysterious Container"
  	 	 	}
  	 	}
