--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -66,7 +66,7 @@
  	 	 	 	"eng": "Shangri-La City center"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[중앙 허브]\r\n        샹그릴라는 이 대륙에서 가장 번화한 도시들 중 하나이며, 세계 각지에서 온 다양한 사람을 만날 수 있는 곳.",
+ 	 	 	 	"trans": "[중앙 허브]\r\n        샹그릴라는 이 대륙에서 가장 번화한 도시들 중 하나이며, 세계 각지에서 온 다양한 사람을 만날 수 있는 곳이다",
  	 	 	 	"eng": "[Central Hub]\r\n        One of the busiest cities in the continent. Here you can find all sorts of people from around the globe."
  	 	 	},
  	 	 	"toStation": {
@@ -563,7 +563,7 @@
  	 	 	 	"eng": "Decrypt memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "유용한 정보를 얻기 위해 메모리 샤드을 해독한다. \r\n         *메모리 샤드은 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말합니다. 조각 안에는 대부분 사이버코드 세계의 잡학지식들이 들어 있지만, 일부 조각에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있습니다.",
+ 	 	 	 	"trans": "유용한 정보를 얻기 위해 메모리 샤드를 해독한다. \r\n         *메모리 샤드는 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말합니다. 조각 안에는 대부분 사이버코드 세계의 잡학지식들이 들어 있지만, 일부 조각에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있습니다.",
  	 	 	 	"eng": "Decrypt a memory shard to retrieve useful intel."
  	 	 	}
  	 	},
@@ -636,37 +636,37 @@
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
- 	 	 	 	"trans": "조잡한",
+ 	 	 	 	"trans": "저급",
  	 	 	 	"eng": "trash"
  	 	 	}
  	 	},
  	 	"common": {
  	 	 	"name": {
- 	 	 	 	"trans": "평범한",
+ 	 	 	 	"trans": "일반",
  	 	 	 	"eng": "common"
  	 	 	}
  	 	},
  	 	"highQuality": {
  	 	 	"name": {
- 	 	 	 	"trans": "개량된",
+ 	 	 	 	"trans": "고급",
  	 	 	 	"eng": "high quality"
  	 	 	}
  	 	},
  	 	"rare": {
  	 	 	"name": {
- 	 	 	 	"trans": "희귀한",
+ 	 	 	 	"trans": "희귀",
  	 	 	 	"eng": "rare"
  	 	 	}
  	 	},
  	 	"legendary": {
  	 	 	"name": {
- 	 	 	 	"trans": "전설적인",
+ 	 	 	 	"trans": "희귀",
  	 	 	 	"eng": "legendary"
  	 	 	}
  	 	},
  	 	"epic": {
  	 	 	"name": {
- 	 	 	 	"trans": "신화적인",
+ 	 	 	 	"trans": "에픽",
  	 	 	 	"eng": "epic"
  	 	 	}
  	 	}
@@ -684,7 +684,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "누군가의 기억과 경험을 지닌 조각으로, 사용하면 ${levelName} 경험치를 얻을 수 있다. \r\n         *경험치 샤드은 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말합니다. 조각 안에는 대부분 사이버코드 세계의 잡학지식이 들어 있지만, 일부 샤드에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있습니다.",
+ 	 	 	 	"trans": "누군가의 기억과 경험을 지닌 조각으로, 사용하면 ${levelName} 경험치를 얻을 수 있다. \r\n         *경험치 샤드는 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말합니다. 조각 안에는 대부분 사이버코드 세계의 잡학지식이 들어 있지만, 일부 샤드에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있습니다.",
  	 	 	 	"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
  	 	 	}
  	 	},
@@ -1319,7 +1319,7 @@
  	 	 	 	"eng": "Factory reset shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "이 샤드은 장비의 기본 설정과 알고리즘을 저장하며, 이는 장비를 초기화하는 데 사용됩니다.",
+ 	 	 	 	"trans": "이 샤드는 장비의 기본 설정과 알고리즘을 저장하며, 이는 장비를 초기화하는 데 사용됩니다.",
  	 	 	 	"eng": "A shard stores default settings and algorithm for equipments, this is used for factory-resetting your equipments"
  	 	 	}
  	 	},
@@ -1704,11 +1704,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "${skipCount}명의 유저가 스킵 중입니다",
+ 	 	 	 	"trans": "${skipCount}명의 유저 스킵 중",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
- 	 	 	 	"trans": "스킵을 사용할 수 있습니다",
+ 	 	 	 	"trans": "스킵 사용 가능",
  	 	 	 	"eng": "Skip Available"
  	 	 	}
  	 	},
@@ -2985,7 +2985,7 @@
  	 	 	},
  	 	 	"marketShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "쿠퐝",
+ 	 	 	 	 	"trans": "쿠빵",
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
@@ -3147,7 +3147,7 @@
  	 	 	 	"eng": "Crafting"
  	 	 	},
  	 	 	"onlyShowCraftable": {
- 	 	 	 	"trans": "제작할 수 없는 레시피를 숨깁니다",
+ 	 	 	 	"trans": "제작할 수 없는 레시피 숨기기",
  	 	 	 	"eng": "Hide recipes that you can\\'t craft"
  	 	 	}
  	 	},
@@ -3597,7 +3597,7 @@
  	 	 	 	"eng": "Stun chance"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "적을 공격할 때 적이 스턴에 걸릴 확률로, \r\n    스턴에 걸리면 당신의 공격에 반응하지 못합니다",
+ 	 	 	 	"trans": "적을 공격할 때 적이 스턴에 걸릴 확률로, \r\n    스턴에 걸리면 적이 당신을 공격할 수 없습니다",
  	 	 	 	"eng": "Chance of you stunning your enemy when dealing damage, \r\n    causing them not able to respond to your attack"
  	 	 	}
  	 	},
