--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -660,7 +660,7 @@
  	 	},
  	 	"legendary": {
  	 	 	"name": {
- 	 	 	 	"trans": "희귀",
+ 	 	 	 	"trans": "전설",
  	 	 	 	"eng": "legendary"
  	 	 	}
  	 	},
