--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1238,7 +1238,7 @@
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Tu peux utiliser vos noyaux d'IA pour combattre automatiquement des ennemis durant votre absence",
+ 	 	 	 	"trans": "Tu peux utiliser tes noyaux d'IA pour combattre automatiquement des ennemis durant ton absence",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
@@ -1474,7 +1474,7 @@
  	 	 	}
  	 	},
  	 	"buttonTut": {
- 	 	 	"trans": "Tu penses être assez fort ? affronte des ennemis plus forts en donjon ! \r\n                         N'oublie pas d'acheter des objets de soins ! Dans un donjon, tu ne pourras pas te régénérer après une bataille.",
+ 	 	 	"trans": "Tu penses être assez fort ? Alors affronte des ennemis plus forts en donjon ! \r\n                         N'oublie pas d'acheter des objets de soins ! Dans un donjon, tu ne pourras pas te régénérer après une bataille.",
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	},
  	 	"enemyInRoomDoorError": {
@@ -4392,7 +4392,7 @@
  	 	 	"eng": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Tu recevreas EXP, Bitcoin et des butins lorsque tu vaincras des ennemis, \n                 Essayez maintenant !",
+ 	 	 	"trans": "Tu recevras de l'EXP, des Bitcoins et du butin lorsque tu vaincras des ennemis, \n                 Essaye maintenant !",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\n                give it a try now!"
  	 	}
  	},
