--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1372,7 +1372,7 @@
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
- 	 	 	 	"trans": "usé",
+ 	 	 	 	"trans": "abîmé",
  	 	 	 	"eng": "trash"
  	 	 	}
  	 	},
@@ -3023,7 +3023,7 @@
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Destructrice.",
+ 	 	 	 	 	 	"trans": "Destructrice",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
