--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -24,7 +24,7 @@
  	"npc": {
  	 	"unitExchange": {
  	 	 	"name": {
- 	 	 	 	"trans": "Scambio di Unità di Arasaka",
+ 	 	 	 	"trans": "Scambio di Unità Arasaka",
  	 	 	 	"eng": "Arasaka Unit Exchange"
  	 	 	},
  	 	 	"tut": {
@@ -66,7 +66,7 @@
  	 	},
  	 	"cosmetic": {
  	 	 	"name": {
- 	 	 	 	"trans": "Tuta Cibernetica (Cyberwear)",
+ 	 	 	 	"trans": "Cyberwear",
  	 	 	 	"eng": "Cosmetic Cyberwear"
  	 	 	},
  	 	 	"tut": {
@@ -164,7 +164,7 @@
  	 	},
  	 	"weaponSmith": {
  	 	 	"name": {
- 	 	 	 	"trans": "Fabbro",
+ 	 	 	 	"trans": "Mercante di armi",
  	 	 	 	"eng": "Weapon Smith"
  	 	 	},
  	 	 	"defaultLines": {
@@ -221,11 +221,11 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Per passare alla prossima area, devi ottenere i Frammenti della Chiave Segreta dai dungeon, \r\n        e usare il Terminale per 'Brute Force' (craftare) la Chiave per l'area successiva",
+ 	 	 	 	"trans": "Per passare alla prossima area, devi ottenere i frammenti della Chiave Segreta dai dungeon, \r\n        e usare il Terminale per forzare la Chiave per l'area successiva",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Il tuo personal computer, anche se è un po' obsoleto, potrebbe portare a termine il lavoro con la dovuta pazienza",
+ 	 	 	 	"trans": "Il tuo pc, anche se è un po' obsoleto, potrebbe portare a termine il lavoro con la dovuta pazienza",
  	 	 	 	"eng": "Your personal computer, although it's a little outdated, it can get the job done with enough patience"
  	 	 	},
  	 	 	"canAccessError": {
@@ -289,7 +289,7 @@
  	 	},
  	 	"bank": {
  	 	 	"name": {
- 	 	 	 	"trans": "Banca di Arasaka",
+ 	 	 	 	"trans": "Banca della Arasaka",
  	 	 	 	"eng": "Bank of Arasaka"
  	 	 	},
  	 	 	"canAccessError": {
@@ -999,11 +999,11 @@
  	 	},
  	 	"aiCore": {
  	 	 	"name": {
- 	 	 	 	"trans": "Hai il core",
+ 	 	 	 	"trans": "AI Core",
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Commercialmente viene usata l'Unità di Processo Neurale (NPU). Viene fornita assieme ad un AI per uso generico. \r\n        Puoi usare questo per rilasciare un farming bot per completare i dungeon per te.",
+ 	 	 	 	"trans": "Unità di Processo Neurale (NPU) usata commercialmente. Viene fornita assieme ad un AI per uso generico. \r\n        Puoi usare questo per rilasciare un farming bot per completare i dungeon per te.",
  	 	 	 	"eng": "Commercially used Neural Processing Unit (NPU). Comes with general purpose AI. \r\n        You can use this to deploy a farming bot to dungeon for you."
  	 	 	}
  	 	},
@@ -1557,11 +1557,11 @@
  	 	},
  	 	"topClanExclusive": {
  	 	 	"name": {
- 	 	 	 	"trans": "Raccogli le tasse di protezione",
+ 	 	 	 	"trans": "Raccogli il pizzo",
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Briteria funzionari del governo e SLPD e raccolgono le tasse di protezione del proprietario del business e dei cittadini a Shangri-Lah. Forse avrai alcuni oggetti epici da loro? (Top Due Gang Exclusive)",
+ 	 	 	 	"trans": "Funzionari corrotti del governo e SLPD e riscuotono il pizzo dal proprietario del business e dai cittadini a Shangri-Lah. Forse otterrai qualche oggetto epico da loro? (Riservato ai Top-2 della Gang nella Classifica)",
  	 	 	 	"eng": "Bribe government officials and the SLPD to collect protection fees from business owners and citizens in Shangri-La. Maybe you’ll get some EPIC items from them? (Exclusive to the Top 2 Gangs on the Occupation Leaderboard"
  	 	 	}
  	 	},
@@ -1571,7 +1571,7 @@
  	 	 	 	"eng": "Hack SL Data Fortress"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Avvia un attacco collaborato nel cyberspazio che si rivolge alla fortezza di dati Shangri-la \r\n         Se l'attacco dovesse riescono è possibile forzare la fortezza di dati per trasmettere exploit a tutti gli utenti cybernet",
+ 	 	 	 	"trans": "Avvia un attacco condiviso nel cyberspazio che si rivolge alla fortezza di dati Shangri-la \r\n         Se l'attacco dovesse riescono è possibile forzare la fortezza di dati per trasmettere exploit a tutti gli utenti cybernet",
  	 	 	 	"eng": "Launch a collaborative attack in cyberspace targeting the Shangri-La Data Fortress.\r\nIf the attack succeeds, it’s possible to force the Data Fortress to transmit exploits to all cybernetically connected users."
  	 	 	}
  	 	}
@@ -1579,37 +1579,37 @@
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
- 	 	 	 	"trans": "spazzatura",
+ 	 	 	 	"trans": "(scarto)",
  	 	 	 	"eng": "trash"
  	 	 	}
  	 	},
  	 	"common": {
  	 	 	"name": {
- 	 	 	 	"trans": "comune",
+ 	 	 	 	"trans": "(comune)",
  	 	 	 	"eng": "common"
  	 	 	}
  	 	},
  	 	"highQuality": {
  	 	 	"name": {
- 	 	 	 	"trans": "alta qualità",
+ 	 	 	 	"trans": "(alta qualità)",
  	 	 	 	"eng": "high quality"
  	 	 	}
  	 	},
  	 	"rare": {
  	 	 	"name": {
- 	 	 	 	"trans": "raro",
+ 	 	 	 	"trans": "(raro)",
  	 	 	 	"eng": "rare"
  	 	 	}
  	 	},
  	 	"legendary": {
  	 	 	"name": {
- 	 	 	 	"trans": "leggendario",
+ 	 	 	 	"trans": "(leggendario)",
  	 	 	 	"eng": "legendary"
  	 	 	}
  	 	},
  	 	"epic": {
  	 	 	"name": {
- 	 	 	 	"trans": "epico",
+ 	 	 	 	"trans": "(epico)",
  	 	 	 	"eng": "epic"
  	 	 	}
  	 	}
@@ -1681,7 +1681,7 @@
  	 	 	}
  	 	},
  	 	"buttonTut": {
- 	 	 	"trans": "Pensi che tu sia abbastanza forte? Ammira i nemici più forti in Dungeon! \r\n                         Ricordati di comprare un oggetto di guarigione! Non tornerai dopo la battaglia in Dungeon",
+ 	 	 	"trans": "Pensi di essere abbastanza forte? Sfida i nemici più forti in un Dungeon! \r\n                         Ricordati di comprare un oggetto di guarigione! Non tornerai dopo la battaglia in Dungeon",
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	},
  	 	"enemyInRoomDoorError": {
@@ -2044,7 +2044,7 @@
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"equipped": {
- 	 	 	 	"trans": "Attrezzata",
+ 	 	 	 	"trans": "Attrezzatura",
  	 	 	 	"eng": "Equipped"
  	 	 	},
  	 	 	"inventory": {
