--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3404,7 +3404,7 @@
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Seleziona un oggetto utilizzabile da legarsi a uno slot rapido",
+ 	 	 	 	 	"trans": "Seleziona un oggetto utilizzabile da associare ad uno slot rapido",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
