--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3699,11 +3699,11 @@
  	"statsType": {
  	 	"health": {
  	 	 	"name": {
- 	 	 	 	"trans": "Vita",
+ 	 	 	 	"trans": "Salute",
  	 	 	 	"eng": "Health"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Aumenta la vita massima",
+ 	 	 	 	"trans": "Aumenta la salute massima",
  	 	 	 	"eng": "Increases maximum health"
  	 	 	}
  	 	},
@@ -3719,7 +3719,7 @@
  	 	},
  	 	"healthRegen": {
  	 	 	"name": {
- 	 	 	 	"trans": "Rigenerazione della vita",
+ 	 	 	 	"trans": "Rigenerazione della salute",
  	 	 	 	"eng": "Health regen"
  	 	 	},
  	 	 	"description": {
@@ -3905,7 +3905,7 @@
  	 	},
  	 	"maxHealth": {
  	 	 	"name": {
- 	 	 	 	"trans": "Vita massima",
+ 	 	 	 	"trans": "Salute massima",
  	 	 	 	"eng": "Max Health"
  	 	 	},
  	 	 	"description": {
@@ -5365,23 +5365,23 @@
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeHealth": {
- 	 	 	"trans": "di salute",
+ 	 	 	"trans": "di Salute",
  	 	 	"eng": "of Health"
  	 	},
  	 	"upgradeDamage": {
- 	 	 	"trans": "di danno",
+ 	 	 	"trans": "di Danno",
  	 	 	"eng": "of Damage"
  	 	},
  	 	"upgradeShield": {
- 	 	 	"trans": "di scudo",
+ 	 	 	"trans": "di Scudo",
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "di furbo",
+ 	 	 	"trans": "di Furtività",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
- 	 	 	"trans": "della vita",
+ 	 	 	"trans": "della Vita",
  	 	 	"eng": "of Life"
  	 	},
  	 	"upgradeStun": {
