--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2453,7 +2453,7 @@
  	 	"machineCrafting": {
  	 	 	"titleBox": {
  	 	 	 	"tile": {
- 	 	 	 	 	"trans": "Italiano del sistema",
+ 	 	 	 	 	"trans": "Sistema in attesa",
  	 	 	 	 	"eng": "system idle"
  	 	 	 	},
  	 	 	 	"subtitle": {
