--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3481,11 +3481,11 @@
  	 	},
  	 	"tipsBox": {
  	 	 	"title": {
- 	 	 	 	"trans": "Consiglio PRO",
+ 	 	 	 	"trans": "Consiglio",
  	 	 	 	"eng": "Pro Tips"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Clicca per ottenere nuovi suggerimenti",
+ 	 	 	 	"trans": "Clicca per un altro suggerimento",
  	 	 	 	"eng": "Click to get new tips"
  	 	 	}
  	 	},
