--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1131,7 +1131,7 @@
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un frammento di memoria che contiene segreti crittografati della gang, \r\n         Decodifica questo nel tuo Quartier Generale della Gang per ottenere informazioni utili (richiede di essere in una banda)",
+ 	 	 	 	"trans": "Un frammento di memoria che contiene segreti crittografati della gang, \r\n         Decodifica questo nel tuo Quartier Generale della Gang per ottenere informazioni utili (richiede di essere in una gang)",
  	 	 	 	"eng": "A memory shard contains encrypted gang secrets, \r\n        decrypt this in your gang headquarters to gain useful intel (requires to be in a gang)"
  	 	 	}
  	 	},
