change armor names to one word ones
"Armure de jambes">"Jambières"
"Armure de buste">"Plastron"

--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -535,13 +535,13 @@
  	 	},
  	 	"upperArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "Armure de buste",
+ 	 	 	 	"trans": "Plastron",
  	 	 	 	"eng": "upper armor"
  	 	 	}
  	 	},
  	 	"lowerArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "Armure de jambes",
+ 	 	 	 	"trans": "Jambières",
  	 	 	 	"eng": "lower armor"
  	 	 	}
  	 	},
