Update and rewrite Russian translation

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -1947,7 +1947,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "Отвечая на ${playerName}",
+ 	 	 	 	"trans": "Ответ ${playerName}",
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	}
  	 	},
@@ -2503,7 +2503,7 @@
  	 	},
  	 	"list": {
  	 	 	"longPressToMultiSelect": {
- 	 	 	 	"trans": "Зажми для мульти-выбора",
+ 	 	 	 	"trans": "Зажми для выбора нескольких предметов",
  	 	 	 	"eng": "Long press to multi-select"
  	 	 	}
  	 	},
@@ -2625,12 +2625,12 @@
  	 	 	 	"vars": [
  	 	 	 	 	"repairFee"
  	 	 	 	],
- 	 	 	 	"trans": "Отремонтируй все предметы за (${repairFee} биткоинов)",
+ 	 	 	 	"trans": "Отремонтировать все предметы за (${repairFee} биткоинов)",
  	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"buyUnit": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Купить единицу",
+ 	 	 	 	 	"trans": "Купить Unit",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
  	 	 	}
@@ -2741,7 +2741,7 @@
  	 	 	 	"eng": "Claimed"
  	 	 	},
  	 	 	"cantClaimYet": {
- 	 	 	 	"trans": "Заблокирован",
+ 	 	 	 	"trans": "Заблокировано",
  	 	 	 	"eng": "Locked"
  	 	 	},
  	 	 	"nextLoginWindow": {
@@ -2789,7 +2789,7 @@
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
- 	 	 	 	"trans": "Телефон ASUS (ZENFONE, ROG) имеет ошибку с экраном, не являющимся кликами, в этом случае, пожалуйста, попробуйте снова включить экран и снова и снова поставить это приложение и возобновить его. Это должно исправить проблему :)",
+ 	 	 	 	"trans": "На ASUS (ZENFONE, ROG), когда экран не вопринимает нажатия, в этом случае, пожалуйста, попробуй выключить и включить экран, или сверните игру и откройте снова. Это должно исправить проблему :)",
  	 	 	 	"eng": "ASUS phone (Zenfone, ROG) has bug with screen being not clickable, in the case, please try turning your screen off and on again, or put this app to background and resume it again. this should fix the issue :)"
  	 	 	}
  	 	},
@@ -2837,7 +2837,7 @@
  	 	 	 	"eng": "Welcome to"
  	 	 	},
  	 	 	"setCharacterNameTitle": {
- 	 	 	 	"trans": "Назовите своего персонажа",
+ 	 	 	 	"trans": "Дайте имя своему персонажу",
  	 	 	 	"eng": "Name your character"
  	 	 	},
  	 	 	"hasRefererCheckbox": {
@@ -3320,7 +3320,7 @@
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Suspicious Activity"
  	 	 	},
  	 	 	"content": {
- 	 	 	 	"trans": "Если у вас есть какие-либо вопросы, пожалуйста, не стесняйтесь обращаться к Декстеру непосредственно через официальный раздор (ссылка можно найти в плавающем меню -> ссылках) или электронной почты в Ching.huang.dexter@gmail.com",
+ 	 	 	 	"trans": "Если у вас есть какие-либо вопросы, пожалуйста, не стесняйтесь обращаться к Декстеру непосредственно через официальный Discord (ссылка можно найти в плавающем меню -> ссылках) или через почту Ching.huang.dexter@gmail.com",
  	 	 	 	"eng": "If you have any questions please feel free to contact Dexter directly via official Discord (Link can be found in Floating Menu -> Links) or email to ching.huang.dexter@gmail.com"
  	 	 	}
  	 	},
@@ -3878,14 +3878,14 @@
  	 	 	"vars": [
  	 	 	 	"minLevel"
  	 	 	],
- 	 	 	"trans": "Энергоячейка (LV ${minLevel})",
+ 	 	 	"trans": "Энергоячейка (ур. ${minLevel})",
  	 	 	"eng": "Energy Cell (lv${minLevel})"
  	 	},
  	 	"ammo2": {
  	 	 	"vars": [
  	 	 	 	"minLevel"
  	 	 	],
- 	 	 	"trans": "Заряд антиматерии (LV ${minLevel})",
+ 	 	 	"trans": "Заряд антиматерии (ур. ${minLevel})",
  	 	 	"eng": "Anti Matter Charge (lv${minLevel})"
  	 	},
  	 	"christmasGift": {
@@ -4049,7 +4049,7 @@
  	 	 	},
  	 	 	"noShowToggle": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Вы можете увидеть полное руководство в Профиль > Руководство",
+ 	 	 	 	 	"trans": "Вы можете увидеть полное руководство в Профиль > Обучение",
  	 	 	 	 	"eng": "You can see the full tutorial at Profile > Tutorial tab"
  	 	 	 	},
  	 	 	 	"label": {
@@ -4364,7 +4364,7 @@
  	 	 	},
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Ты не можешь использовать этот предмет во время уличных боев, предметы доступны только во время подземелья",
+ 	 	 	 	 	"trans": "Ты не можешь использовать этот предмет во время уличных боев, он доступен только во время подземелья",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	}
@@ -4372,7 +4372,7 @@
  	},
  	"tutorial": {
  	 	"localCombatButton": {
- 	 	 	"trans": "Нажми здесь, чтобы проверить наличие уличных врагов",
+ 	 	 	"trans": "Нажми здесь, чтобы найти уличных врагов",
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombat": {
@@ -4437,7 +4437,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Вы также можете внести свой вклад в знание элементов, отредактировав файл конфигурации на нашей странице GitHub.",
+ 	 	 	 	"trans": "Вы также можете внести свой вклад в перевод, отредактировав файл конфигурации на нашей странице GitHub.",
  	 	 	 	"eng": "You can contribute to the lore of items too by editing the config file in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
@@ -5055,7 +5055,7 @@
  	 	 	},
  	 	 	"sellItem": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Торговать",
+ 	 	 	 	 	"trans": "Стань торговцем",
  	 	 	 	 	"eng": "Be a merchant"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5102,11 +5102,11 @@
  	},
  	"itemTrait": {
  	 	"stun": {
- 	 	 	"trans": "ошеломляющий",
+ 	 	 	"trans": "Оглушения",
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
- 	 	 	"trans": "переговоров",
+ 	 	 	"trans": "Переговоров",
  	 	 	"eng": "of Bargaining"
  	 	},
  	 	"power": {
@@ -5122,15 +5122,15 @@
  	 	 	"eng": "of Life"
  	 	},
  	 	"maxShield": {
- 	 	 	"trans": "Экранирования",
+ 	 	 	"trans": "Щита",
  	 	 	"eng": "of Shielding"
  	 	},
  	 	"sneaky": {
- 	 	 	"trans": "подкрадывания",
+ 	 	 	"trans": "Побега",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"evade": {
- 	 	 	"trans": "уклонения",
+ 	 	 	"trans": "Уклонения",
  	 	 	"eng": "of Evasion"
  	 	},
  	 	"pocketed": {
@@ -5166,11 +5166,11 @@
  	 	 	"eng": "of Damage"
  	 	},
  	 	"upgradeShield": {
- 	 	 	"trans": "щит",
+ 	 	 	"trans": "щита",
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "подкрадывания",
+ 	 	 	"trans": "побега",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
@@ -5178,7 +5178,7 @@
  	 	 	"eng": "of Life"
  	 	},
  	 	"upgradeStun": {
- 	 	 	"trans": "ошеломления",
+ 	 	 	"trans": "ошлушения",
  	 	 	"eng": "of Stun"
  	 	},
  	 	"upgradeCriticalChance": {
