--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3944,7 +3944,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "おめでとうございます！${levelName}がレベルアップしました！",
+ 	 	 	 	"trans": "おめでとうございます！${levelName}にレベルアップしました！",
  	 	 	 	"eng": "Congratulation, you have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
@@ -4937,7 +4937,7 @@
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "このタイトルは期限切れになることはありません。\\n あなたのアカウントを永遠に滞在します。",
+ 	 	 	"trans": "このタイトルは期限切れになることはありません。\r\n あなたのアカウントを永遠に滞在します。",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
